--- a/course-info.yaml
+++ b/course-info.yaml
@@ -33,4 +33,6 @@ additional_files:
   - name: .gitignore
   - name: .git/objects/25/6ed5ac46311c1cf9608470cb3cafeb93c18d6e
     is_binary: true
+  - name: .git/objects/ba/38c4ef485b4d309463bd85aa94398ce2fd9c03
+    is_binary: true
 yaml_version: 3
